--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,8 +33,10 @@ jobs:
           Remove-Item dist -Recurse -Force
         }
         New-Item -ItemType Directory -Force -Path dist
-        cargo +nightly build --release -p version --target=x86_64-pc-windows-msvc || exit 1
-        cargo +nightly-i686-pc-windows-msvc build --release -p huawei-pc-manager-bootstrap-core -p huawei-pc-manager-bootstrap --target=i686-pc-windows-msvc || exit 1
+        cargo +nightly build --release -p version --target=x86_64-pc-windows-msvc
+        if ($LASTEXITCODE -ne 0) { exit 1 }
+        cargo +nightly build --release -p huawei-pc-manager-bootstrap-core -p huawei-pc-manager-bootstrap --target=i686-pc-windows-msvc
+        if ($LASTEXITCODE -ne 0) { exit 1 }
         Copy-Item -Path "target\i686-pc-windows-msvc\release\huawei_pc_manager_bootstrap_core.dll" -Destination "dist"
         Copy-Item -Path "target\i686-pc-windows-msvc\release\huawei-pc-manager-bootstrap.exe" -Destination "dist"
 
