--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         choco install rust-msvc -y
         echo "C:\Users\runneradmin\.cargo\bin" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8 
+        rustup update
         rustup target add x86_64-pc-windows-msvc
         rustup target add i686-pc-windows-msvc
 
