--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,5 @@ members = [
   "packages/*"
 ]
 
-[unstable]
-features = ["unstable_features"]
+[dependencies]
+simd-json = { version = "0.4.0", features = ["stdsimd"] }
